--- a/docRefs.bib
+++ b/docRefs.bib
@@ -1,5 +1,5 @@
 
-@article{lack_triangulations_2014,
+@article{lack:triangulations:2014,
 	title = {Triangulations, orientals, and skew monoidal categories},
 	volume = {258},
 	issn = {0001-8708},
@@ -13,7 +13,7 @@
 	file = {Lack-2014-Triangulations-orientals-and-skew-m:/Users/wanchengsyuan/Zotero/storage/GD629YAN/Lack-2014-Triangulations-orientals-and-skew-m.pdf:application/pdf}
 }
 
-@article{uustalu_sequent_2018,
+@article{uustalu:sequent:2018,
 	title = {The Sequent Calculus of Skew Monoidal Categories},
 	volume = {341},
 	issn = {1571-0661},
@@ -27,7 +27,7 @@
 	file = {Uustalu et al. - 2018 - The Sequent Calculus of Skew Monoidal Categories.pdf:/Users/wanchengsyuan/Zotero/storage/4QSFPE3F/Uustalu et al. - 2018 - The Sequent Calculus of Skew Monoidal Categories.pdf:application/pdf}
 }
 
-@article{szlachanyi_skew-monoidal_2012,
+@article{szlachanyi:skew-monoidal:2012,
 	title = {Skew-monoidal categories and bialgebroids},
 	volume = {231},
 	issn = {0001-8708},
@@ -41,7 +41,7 @@
 	file = {Szlachanyi-2012-Skew-monoidal-categories-and-bialge:/Users/wanchengsyuan/Zotero/storage/XJ9UHVH9/Szlachanyi-2012-Skew-monoidal-categories-and-bialge.pdf:application/pdf}
 }
 
-@article{pinto_proof-theoretic_2018,
+@article{pinto:proof-theoretic:2018,
 	title = {A proof-theoretic study of bi-intuitionistic propositional sequent calculus},
 	volume = {28},
 	issn = {0955-792X, 1465-363X},
@@ -58,7 +58,7 @@
 	file = {Pinto and Uustalu - 2018 - A proof-theoretic study of bi-intuitionistic propo.pdf:/Users/wanchengsyuan/Zotero/storage/LUC5WBTL/Pinto and Uustalu - 2018 - A proof-theoretic study of bi-intuitionistic propo.pdf:application/pdf}
 }
 
-@article{uustalu_coherence_2014,
+@article{uustalu:coherence:2014,
 	title = {Coherence for Skew-Monoidal Categories},
 	volume = {153},
 	issn = {2075-2180},
@@ -78,7 +78,7 @@
 	file = {Uustalu - 2014 - Coherence for Skew-Monoidal Categories.pdf:/Users/wanchengsyuan/Zotero/storage/TU6Z6RM3/Uustalu - 2014 - Coherence for Skew-Monoidal Categories.pdf:application/pdf;arXiv.org Snapshot:/Users/wanchengsyuan/Zotero/storage/JVGVVAZW/1406.html:text/html}
 }
 
-@inproceedings{altenkirch_monads_2010,
+@inproceedings{altenkirch:monads:2010,
 	location = {Berlin, Heidelberg},
 	title = {Monads Need Not Be Endofunctors},
 	isbn = {978-3-642-12032-9},
@@ -96,7 +96,7 @@
 	file = {Altenkirch et al. - 2010 - Monads Need Not Be Endofunctors.pdf:/Users/wanchengsyuan/Zotero/storage/8T4QKBPP/Altenkirch et al. - 2010 - Monads Need Not Be Endofunctors.pdf:application/pdf}
 }
 
-@article{beke_categorification_2011,
+@article{beke:categorification:2011,
 	title = {Categorification, term rewriting and the Knuth–Bendix procedure},
 	volume = {215},
 	issn = {0022-4049},
@@ -113,7 +113,7 @@
 	file = {Beke - 2011 - Categorification, term rewriting and the Knuth–Ben.pdf:/Users/wanchengsyuan/Zotero/storage/SMNJTKG7/Beke - 2011 - Categorification, term rewriting and the Knuth–Ben.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/AZRFTZE2/S0022404910001325.html:text/html}
 }
 
-@article{uustalu_eilenberg-kelly_2020,
+@article{uustalu:eilenberg-kelly:2020,
 	title = {Eilenberg-Kelly Reloaded},
 	volume = {352},
 	issn = {1571-0661},
@@ -131,7 +131,7 @@
 	file = {Uustalu et al. - 2020 - Eilenberg-Kelly Reloaded.pdf:/Users/wanchengsyuan/Zotero/storage/AKHMNT6B/Uustalu et al. - 2020 - Eilenberg-Kelly Reloaded.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/F5R3KS9T/S1571066120300633.html:text/html}
 }
 
-@article{uustalu_deductive_nodate,
+@article{uustalu:deductive:nodate,
 	title = {Deductive Systems and Coherence for Skew Prounital Closed Categories},
 	volume = {332},
 	url = {https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?LFMTP2020:17},
@@ -142,7 +142,7 @@
 	file = {Uustalu et al. - Deductive Systems and Coherence for Skew Prounital.pdf:/Users/wanchengsyuan/Zotero/storage/X5E9XJD8/Uustalu et al. - Deductive Systems and Coherence for Skew Prounital.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/9KYPPGSQ/paper.html:text/html}
 }
 
-@article{uustalu_proof_nodate,
+@article{uustalu:proof:nodate,
 	title = {Proof Theory of Partially Normal Skew Monoidal Categories},
 	volume = {333},
 	url = {https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?ACT2020:60},
@@ -153,7 +153,7 @@
 	file = {Uustalu et al. - Proof Theory of Partially Normal Skew Monoidal Cat.pdf:/Users/wanchengsyuan/Zotero/storage/BC4BL4NP/Uustalu et al. - Proof Theory of Partially Normal Skew Monoidal Cat.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/UVW2FYNM/paper.html:text/html}
 }
 
-@inproceedings{eilenberg_closed_1966,
+@inproceedings{eilenberg:closed:1966,
 	location = {Berlin, Heidelberg},
 	title = {Closed Categories},
 	isbn = {978-3-642-99902-4},
@@ -170,7 +170,7 @@
 	file = {Eilenberg and Kelly - 1966 - Closed Categories.pdf:/Users/wanchengsyuan/Zotero/storage/PMSS6J3A/Eilenberg and Kelly - 1966 - Closed Categories.pdf:application/pdf}
 }
 
-@inproceedings{guenot_symmetric_2014,
+@inproceedings{guenot:symmetric:2014,
 	location = {Vienna Austria},
 	title = {Symmetric normalisation for intuitionistic logic},
 	isbn = {978-1-4503-2886-9},
@@ -188,7 +188,7 @@
 	file = {Guenot and Straßburger - 2014 - Symmetric normalisation for intuitionistic logic.pdf:/Users/wanchengsyuan/Zotero/storage/AEWMRFYT/Guenot and Straßburger - 2014 - Symmetric normalisation for intuitionistic logic.pdf:application/pdf}
 }
 
-@article{tiu_local_nodate,
+@article{tiu:local:nodate,
 	title = {A Local System for Intuitionistic Logic},
 	abstract = {This paper presents systems for ﬁrst-order intuitionistic logic and several of its extensions in which all the propositional rules are local, in the sense that, in applying the rules of the system, one needs only a ﬁxed amount of information about the logical expressions involved. The main source of non-locality is the contraction rules. We show that the contraction rules can be restricted to the atomic ones, provided we employ deep-inference, i.e., to allow rules to apply anywhere inside logical expressions. We further show that the use of deep inference allows for modular extensions of intuitionistic logic to Dummett’s intermediate logic {LC}, G¨odel logic and classical logic. We present the systems in the calculus of structures, a proof theoretic formalism which supports deep-inference. Cut elimination for these systems are proved indirectly by simulating the cut-free sequent systems, or the hypersequent systems in the cases of Dummett’s {LC} and G¨odel logic, in the cut free systems in the calculus of structures.},
 	pages = {15},
@@ -197,7 +197,7 @@
 	file = {Tiu - A Local System for Intuitionistic Logic.pdf:/Users/wanchengsyuan/Zotero/storage/3YW9Y7E9/Tiu - A Local System for Intuitionistic Logic.pdf:application/pdf}
 }
 
-@incollection{cervesato_algorithmic_2008,
+@incollection{cervesato:algorithmic:2008,
 	location = {Berlin, Heidelberg},
 	title = {An Algorithmic Interpretation of a Deep Inference System},
 	volume = {5330},
@@ -217,7 +217,7 @@
 	file = {Brünnler and McKinley - 2008 - An Algorithmic Interpretation of a Deep Inference .pdf:/Users/wanchengsyuan/Zotero/storage/PL9VZRIK/Brünnler and McKinley - 2008 - An Algorithmic Interpretation of a Deep Inference .pdf:application/pdf}
 }
 
-@inproceedings{gundersen_atomic_2013,
+@inproceedings{gundersen:atomic:2013,
 	location = {New Orleans, {LA}, {USA}},
 	title = {Atomic Lambda Calculus: A Typed Lambda-Calculus with Explicit Sharing},
 	isbn = {978-1-4799-0413-6},
@@ -236,7 +236,7 @@
 	file = {Gundersen et al. - 2013 - Atomic Lambda Calculus A Typed Lambda-Calculus wi.pdf:/Users/wanchengsyuan/Zotero/storage/B6SYHNRK/Gundersen et al. - 2013 - Atomic Lambda Calculus A Typed Lambda-Calculus wi.pdf:application/pdf}
 }
 
-@article{guiraud_three_2006,
+@article{guiraud:three:2006,
 	title = {The three dimensions of proofs},
 	volume = {141},
 	issn = {0168-0072},
@@ -254,7 +254,7 @@
 	file = {Guiraud - 2006 - The three dimensions of proofs.pdf:/Users/wanchengsyuan/Zotero/storage/CZBAXCB9/Guiraud - 2006 - The three dimensions of proofs.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/AMB32G6W/S0168007205001892.html:text/html}
 }
 
-@article{r_buss_undecidability_1991,
+@article{r:buss:undecidability:1991,
 	title = {The undecidability of k-provability},
 	volume = {53},
 	issn = {01680072},
@@ -270,7 +270,7 @@
 	file = {R. Buss - 1991 - The undecidability of k-provability.pdf:/Users/wanchengsyuan/Zotero/storage/I44IJR3X/R. Buss - 1991 - The undecidability of k-provability.pdf:application/pdf}
 }
 
-@article{guenot_focused_2010,
+@article{guenot:focused:2010,
 	title = {Focused Proof Search for Linear Logic in the Calculus of Structures},
 	url = {http://drops.dagstuhl.de/opus/volltexte/2010/2586/},
 	doi = {10.4230/LIPICS.ICLP.2010.84},
@@ -291,7 +291,7 @@ The proof-theoretic approach to logic programming has benefited from the introdu
 	file = {Guenot - 2010 - Focused Proof Search for Linear Logic in the Calcu.pdf:/Users/wanchengsyuan/Zotero/storage/IVG64GCX/Guenot - 2010 - Focused Proof Search for Linear Logic in the Calcu.pdf:application/pdf}
 }
 
-@article{noauthor_institut_1992,
+@article{noauthor:institut:1992,
 	title = {Institut national de recherche en informatique et en automatique},
 	volume = {37},
 	issn = {0759-1063, 2070-2779},
@@ -307,7 +307,7 @@ The proof-theoretic approach to logic programming has benefited from the introdu
 	file = {1992 - Institut national de recherche en informatique et .pdf:/Users/wanchengsyuan/Zotero/storage/LFEIJDZT/1992 - Institut national de recherche en informatique et .pdf:application/pdf}
 }
 
-@article{strasburger_deep_nodate,
+@article{strasburger:deep:nodate,
 	title = {From Deep Inference to Proof Nets via Cut Elimination},
 	abstract = {This paper shows how derivations in the deep inference system {SKS} for classical propositional logic can be translated into proof nets. Since an {SKS} derivation contains more information about a proof than the corresponding proof net, we observe a loss of information which can be understood as “eliminating bureaucracy”. Technically this is achieved by cut reduction on proof nets. As an intermediate step between the two extremes, {SKS} derivations and proof nets, we will see proof graphs representing derivations in “Formalism A”.},
 	pages = {41},
@@ -316,7 +316,7 @@ The proof-theoretic approach to logic programming has benefited from the introdu
 	file = {Straßburger - From Deep Inference to Proof Nets via Cut Eliminat.pdf:/Users/wanchengsyuan/Zotero/storage/AI6TEGV9/Straßburger - From Deep Inference to Proof Nets via Cut Eliminat.pdf:application/pdf}
 }
 
-@inproceedings{acclavio_logic_2020,
+@inproceedings{acclavio:logic:2020,
 	location = {Saarbrücken Germany},
 	title = {Logic Beyond Formulas: A Proof System on Graphs},
 	isbn = {978-1-4503-7104-9},
@@ -335,7 +335,7 @@ The proof-theoretic approach to logic programming has benefited from the introdu
 	file = {Acclavio et al. - 2020 - Logic Beyond Formulas A Proof System on Graphs.pdf:/Users/wanchengsyuan/Zotero/storage/DZH3VQ9P/Acclavio et al. - 2020 - Logic Beyond Formulas A Proof System on Graphs.pdf:application/pdf}
 }
 
-@article{chaudhuri_focused_2011,
+@article{chaudhuri:focused:2011,
 	title = {The Focused Calculus of Structures},
 	url = {http://drops.dagstuhl.de/opus/volltexte/2011/3229/},
 	doi = {10.4230/LIPICS.CSL.2011.159},
@@ -356,7 +356,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Chaudhuri et al. - 2011 - The Focused Calculus of Structures.pdf:/Users/wanchengsyuan/Zotero/storage/A3AFG36R/Chaudhuri et al. - 2011 - The Focused Calculus of Structures.pdf:application/pdf}
 }
 
-@inproceedings{wang_temporalizing_2013,
+@inproceedings{wang:temporalizing:2013,
 	location = {Berlin, Heidelberg},
 	title = {Temporalizing Modal Epistemic Logic},
 	isbn = {978-3-642-35722-0},
@@ -374,7 +374,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Wang - 2013 - Temporalizing Modal Epistemic Logic.pdf:/Users/wanchengsyuan/Zotero/storage/LIPH9RBU/Wang - 2013 - Temporalizing Modal Epistemic Logic.pdf:application/pdf}
 }
 
-@inproceedings{capretta_coalgebraic_2016,
+@inproceedings{capretta:coalgebraic:2016,
 	location = {Berlin, Heidelberg},
 	title = {A Coalgebraic View of Bar Recursion and Bar Induction},
 	isbn = {978-3-662-49630-5},
@@ -392,7 +392,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Capretta and Uustalu - 2016 - A Coalgebraic View of Bar Recursion and Bar Induct.pdf:/Users/wanchengsyuan/Zotero/storage/5VDHB6CN/Capretta and Uustalu - 2016 - A Coalgebraic View of Bar Recursion and Bar Induct.pdf:application/pdf}
 }
 
-@article{prawitz_seeming_2019,
+@article{prawitz:seeming:2019,
 	title = {The Seeming Interdependence Between the Concepts of Valid Inference and Proof},
 	volume = {38},
 	issn = {1572-8749},
@@ -409,7 +409,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Prawitz - 2019 - The Seeming Interdependence Between the Concepts o.pdf:/Users/wanchengsyuan/Zotero/storage/YHMB9Q4S/Prawitz - 2019 - The Seeming Interdependence Between the Concepts o.pdf:application/pdf}
 }
 
-@article{street_skew-closed_2013,
+@article{street:skew-closed:2013,
 	title = {Skew-closed categories},
 	volume = {217},
 	issn = {0022-4049},
@@ -426,7 +426,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Street - 2013 - Skew-closed categories.pdf:/Users/wanchengsyuan/Zotero/storage/2XY9B2BB/Street - 2013 - Skew-closed categories.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/CDYEFFAY/S0022404912002964.html:text/html}
 }
 
-@article{loregian_coend_2020,
+@article{loregian:coend:2020,
 	title = {Coend calculus},
 	url = {http://arxiv.org/abs/1501.02503},
 	abstract = {The book formerly known as "This is the (co)end, my only (co)friend".},
@@ -441,7 +441,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Loregian - 2020 - Coend calculus.pdf:/Users/wanchengsyuan/Zotero/storage/I4B3DTG4/Loregian - 2020 - Coend calculus.pdf:application/pdf;arXiv.org Snapshot:/Users/wanchengsyuan/Zotero/storage/4CS832N6/1501.html:text/html}
 }
 
-@article{kelly_coherence_1971,
+@article{kelly:coherence:1971,
 	title = {Coherence in closed categories},
 	volume = {1},
 	issn = {0022-4049},
@@ -457,7 +457,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Kelly and Maclane - 1971 - Coherence in closed categories.pdf:/Users/wanchengsyuan/Zotero/storage/GGBLRIC5/Kelly and Maclane - 1971 - Coherence in closed categories.pdf:application/pdf}
 }
 
-@article{martini_modal_1994,
+@article{martini:modal:1994,
 	title = {A Modal View of Linear Logic},
 	volume = {59},
 	issn = {0022-4812},
@@ -474,7 +474,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Martini and Masini - 1994 - A Modal View of Linear Logic.pdf:/Users/wanchengsyuan/Zotero/storage/ZAYEYNME/Martini and Masini - 1994 - A Modal View of Linear Logic.pdf:application/pdf}
 }
 
-@article{fukuda_higher-arity_2018,
+@article{fukuda:higher-arity:2018,
 	title = {A Higher-arity Sequent Calculus for Model Linear Logic (Proof theory and proving)},
 	issn = {1880-2818},
 	url = {https://ci.nii.ac.jp/naid/120006645672/},
@@ -488,7 +488,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Fukuda and Yoshimizu - 2018 - A Higher-arity Sequent Calculus for Model Linear L.pdf:/Users/wanchengsyuan/Zotero/storage/Y6XTQSG7/Fukuda and Yoshimizu - 2018 - A Higher-arity Sequent Calculus for Model Linear L.pdf:application/pdf;A Higher-arity Sequent Calculus for Model Linear Logic (Proof theory and proving) Snapshot:/Users/wanchengsyuan/Zotero/storage/U7BTP3MB/120006645672.html:text/html}
 }
 
-@article{pfenning_modal_1995,
+@article{pfenning:modal:1995,
 	title = {On a Modal λ-Calculus for S4*},
 	volume = {1},
 	issn = {1571-0661},
@@ -505,7 +505,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Pfenning and Wong - 1995 - On a Modal λ-Calculus for S4.pdf:/Users/wanchengsyuan/Zotero/storage/7RX3UDNY/Pfenning and Wong - 1995 - On a Modal λ-Calculus for S4.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/X4CQ9VYK/S1571066104000283.html:text/html}
 }
 
-@article{bierman_intuitionistic_2000,
+@article{bierman:intuitionistic:2000,
 	title = {On an Intuitionistic Modal Logic},
 	volume = {65},
 	issn = {1572-8730},
@@ -522,7 +522,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Bierman and de Paiva - 2000 - On an Intuitionistic Modal Logic.pdf:/Users/wanchengsyuan/Zotero/storage/NIRGAVKP/Bierman and de Paiva - 2000 - On an Intuitionistic Modal Logic.pdf:application/pdf}
 }
 
-@inproceedings{barenbaum_rewrites_2020,
+@inproceedings{barenbaum:rewrites:2020,
 	location = {New York, {NY}, {USA}},
 	title = {Rewrites as Terms through Justification Logic},
 	isbn = {978-1-4503-8821-4},
@@ -540,7 +540,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Barenbaum and Bonelli - 2020 - Rewrites as Terms through Justification Logic.pdf:/Users/wanchengsyuan/Zotero/storage/QU74HQ6B/Barenbaum and Bonelli - 2020 - Rewrites as Terms through Justification Logic.pdf:application/pdf}
 }
 
-@article{lincoln_decision_1992,
+@article{lincoln:decision:1992,
 	title = {Decision problems for propositional linear logic},
 	volume = {56},
 	issn = {0168-0072},
@@ -557,7 +557,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Lincoln et al. - 1992 - Decision problems for propositional linear logic.pdf:/Users/wanchengsyuan/Zotero/storage/HQMRDDNJ/Lincoln et al. - 1992 - Decision problems for propositional linear logic.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/36NBT57W/016800729290075B.html:text/html}
 }
 
-@incollection{ono_structural_1990,
+@incollection{ono:structural:1990,
 	location = {Boston, {MA}},
 	title = {Structural Rules and a Logical Hierarchy},
 	isbn = {978-1-4613-0609-2},
@@ -575,7 +575,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	keywords = {Categorial Grammar, Classical Logic, Deduction System, Intuitionistic Logic, Linear Logic}
 }
 
-@article{mints_linear_1998,
+@article{mints:linear:1998,
 	title = {Linear Lambda-Terms and Natural Deduction},
 	volume = {60},
 	issn = {0039-3215},
@@ -590,7 +590,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Mints - 1998 - Linear Lambda-Terms and Natural Deduction.pdf:/Users/wanchengsyuan/Google 雲端硬碟/TalTech/Mints - 1998 - Linear Lambda-Terms and Natural Deduction.pdf:application/pdf}
 }
 
-@inproceedings{chaudhuri_focusing_2005,
+@inproceedings{chaudhuri:focusing:2005,
 	location = {Berlin, Heidelberg},
 	title = {Focusing the Inverse Method for Linear Logic},
 	isbn = {978-3-540-31897-2},
@@ -608,7 +608,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Chaudhuri and Pfenning - 2005 - Focusing the Inverse Method for Linear Logic.pdf:/Users/wanchengsyuan/Zotero/storage/N8N5J9LJ/Chaudhuri and Pfenning - 2005 - Focusing the Inverse Method for Linear Logic.pdf:application/pdf}
 }
 
-@article{kamide_linear_2006,
+@article{kamide:linear:2006,
 	title = {Linear and affine logics with temporal, spatial and epistemic operators},
 	volume = {353},
 	issn = {0304-3975},
@@ -626,7 +626,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Kamide - 2006 - Linear and affine logics with temporal, spatial an.pdf:/Users/wanchengsyuan/Zotero/storage/4KQZPBPN/Kamide - 2006 - Linear and affine logics with temporal, spatial an.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/WHSZ4C8Z/S0304397505007863.html:text/html}
 }
 
-@incollection{schellinx_linear_1996,
+@incollection{schellinx:linear:1996,
 	location = {Dordrecht},
 	title = {A Linear Approach to Modal Proof Theory},
 	isbn = {978-94-017-2798-3},
@@ -645,7 +645,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	keywords = {Modal Logic, Classical Logic, Intuitionistic Logic, Linear Logic, Linear Approach}
 }
 
-@article{rosiger_coalgebras_2000,
+@article{rosiger:coalgebras:2000,
 	title = {Coalgebras and Modal Logic},
 	volume = {33},
 	issn = {1571-0661},
@@ -662,7 +662,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Rößiger - 2000 - Coalgebras and Modal Logic.pdf:/Users/wanchengsyuan/Zotero/storage/LGDKSZBI/Rößiger - 2000 - Coalgebras and Modal Logic.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/SL6Q2A56/S1571066105803536.html:text/html}
 }
 
-@article{kupke_coalgebraic_2011,
+@article{kupke:coalgebraic:2011,
 	title = {Coalgebraic semantics of modal logics: An overview},
 	volume = {412},
 	issn = {0304-3975},
@@ -682,7 +682,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Kupke and Pattinson - 2011 - Coalgebraic semantics of modal logics An overview.pdf:/Users/wanchengsyuan/Zotero/storage/KBSMY9A9/Kupke and Pattinson - 2011 - Coalgebraic semantics of modal logics An overview.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/ZE9R82IT/S0304397511003215.html:text/html}
 }
 
-@incollection{de_paiva_categorical_2014,
+@incollection{de:paiva:categorical:2014,
 	location = {Dordrecht},
 	title = {Categorical Semantics of Linear Logic for All},
 	isbn = {978-94-007-7548-0},
@@ -702,7 +702,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Submitted Version:/Users/wanchengsyuan/Zotero/storage/865FL8Y9/de Paiva - 2014 - Categorical Semantics of Linear Logic for All.pdf:application/pdf}
 }
 
-@article{hasegawa_linear_2017,
+@article{hasegawa:linear:2017,
 	title = {Linear Exponential Comonads without Symmetry},
 	volume = {238},
 	issn = {2075-2180},
@@ -715,7 +715,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	note = {Publisher: Open Publishing Association}
 }
 
-@inproceedings{benton_mixed_1995,
+@inproceedings{benton:mixed:1995,
 	location = {Berlin, Heidelberg},
 	title = {A mixed linear and non-linear logic: Proofs, terms and models},
 	isbn = {978-3-540-49404-1},
@@ -733,14 +733,14 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	keywords = {Monoidal Category, Linear Logic, Sequent Calculus, Natural Deduction, Full Subcategory}
 }
 
-@online{noauthor_j_nodate,
+@online{noauthor:j:nodate,
 	title = {J. Jiang - On the Lambek Calculus with an Exchange Modality},
 	url = {https://click.endnote.com/viewer?doi=10.4204%2Feptcs.292.4&token=WzIwOTc1NzQsIjEwLjQyMDQvZXB0Y3MuMjkyLjQiXQ.nr2ZTXcPzdDyzTX2aXWY0mqhUnk},
 	urldate = {2021-07-10},
 	file = {J. Jiang - On the Lambek Calculus with an Exchange Modality:/Users/wanchengsyuan/Zotero/storage/AXTIQ8RL/viewer.html:text/html}
 }
 
-@article{jiang_lambek_2019,
+@article{jiang:lambek:2019,
 	title = {On the Lambek Calculus with an Exchange Modality},
 	volume = {292},
 	issn = {2075-2180},
@@ -760,7 +760,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Jiang et al. - 2019 - On the Lambek Calculus with an Exchange Modality.pdf:/Users/wanchengsyuan/Zotero/storage/LZ6C6DFT/Jiang et al. - 2019 - On the Lambek Calculus with an Exchange Modality.pdf:application/pdf;arXiv.org Snapshot:/Users/wanchengsyuan/Zotero/storage/MXKZHCQ8/1904.html:text/html}
 }
 
-@inproceedings{benton_mixed_1994,
+@inproceedings{benton:mixed:1994,
 	title = {A Mixed Linear and Non-Linear Logic: Proofs, Terms and Models},
 	shorttitle = {A Mixed Linear and Non-Linear Logic},
 	abstract = {Intuitionistic linear logic regains the expressive power of intuitionistic logic through the ! (`of course') modality. Benton, Bierman, Hyland and de Paiva have given a term assignment system for {ILL} and an associated notion of categorical model in which the ! modality is modelled by a comonad satisfying certain extra conditions. Ordinary intuitionistic logic is then modelled in a cartesian closed category which arises as a full subcategory of the category of coalgebras for the comonad. This paper attempts to explain the connection between {ILL} and {IL} more directly and symmetrically by giving a logic, term calculus and categorical model for a system in which the linear and non-linear worlds exist on an equal footing, with operations allowing one to pass in both directions. We start from the categorical model of {ILL} given by Benton, Bierman, Hyland and de Paiva and show that this is equivalent to having a symmetric monoidal adjunction between a symmetric monoidal closed category and a ca...},
@@ -771,7 +771,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Citeseer - Snapshot:/Users/wanchengsyuan/Zotero/storage/NWB5A4UL/download.html:text/html;Benton - 1994 - A Mixed Linear and Non-Linear Logic Proofs, Terms.pdf:/Users/wanchengsyuan/Zotero/storage/L55QTN4G/Benton - 1994 - A Mixed Linear and Non-Linear Logic Proofs, Terms.pdf:application/pdf}
 }
 
-@report{bierman_intuitionistic_1994,
+@report{bierman:intuitionistic:1994,
 	title = {On intuitionistic linear logic},
 	url = {https://www.cl.cam.ac.uk/techreports/UCAM-CL-TR-346.html},
 	number = {{UCAM}-{CL}-{TR}-346},
@@ -783,7 +783,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Snapshot:/Users/wanchengsyuan/Zotero/storage/IY54IDXU/UCAM-CL-TR-346.html:text/html}
 }
 
-@article{brown_relations_1995,
+@article{brown:relations:1995,
 	title = {Relations and non-commutative linear logic},
 	volume = {105},
 	issn = {0022-4049},
@@ -800,7 +800,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Brown and Gurr - 1995 - Relations and non-commutative linear logic.pdf:/Users/wanchengsyuan/Zotero/storage/MCRX98VD/Brown and Gurr - 1995 - Relations and non-commutative linear logic.pdf:application/pdf;ScienceDirect Snapshot:/Users/wanchengsyuan/Zotero/storage/IEY3WTBG/0022404994001472.html:text/html}
 }
 
-@article{kanovich_subexponentials_2019,
+@article{kanovich:subexponentials:2019,
 	title = {Subexponentials in non-commutative linear logic},
 	volume = {29},
 	issn = {0960-1295, 1469-8072},
@@ -818,7 +818,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Kanovich et al. - 2019 - Subexponentials in non-commutative linear logic.pdf:/Users/wanchengsyuan/Zotero/storage/CBYGXJW9/Kanovich et al. - 2019 - Subexponentials in non-commutative linear logic.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/5UM8RZLT/198AED235060784373045941E5A70241.html:text/html}
 }
 
-@inproceedings{polakow_natural_1999,
+@inproceedings{polakow:natural:1999,
 	location = {Berlin, Heidelberg},
 	title = {Natural Deduction for Intuitionistic Non-commutative Linear Logic},
 	isbn = {978-3-540-48959-7},
@@ -836,7 +836,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Polakow and Pfenning - 1999 - Natural Deduction for Intuitionistic Non-commutati.pdf:/Users/wanchengsyuan/Zotero/storage/GFH46KUS/Polakow and Pfenning - 1999 - Natural Deduction for Intuitionistic Non-commutati.pdf:application/pdf}
 }
 
-@article{yetter_quantales_1990,
+@article{yetter:quantales:1990,
 	title = {Quantales and (noncommutative) linear logic},
 	volume = {55},
 	issn = {0022-4812, 1943-5886},
@@ -854,7 +854,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Snapshot:/Users/wanchengsyuan/Zotero/storage/99Q3XL9X/1808CA04372612BCB38E8D3A8B4CCCDB.html:text/html}
 }
 
-@article{andreoli_logic_1992,
+@article{andreoli:logic:1992,
 	title = {Logic Programming with Focusing Proofs in Linear Logic},
 	volume = {2},
 	issn = {0955-792X},
@@ -870,7 +870,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Snapshot:/Users/wanchengsyuan/Zotero/storage/LGTCIBYK/1012743.html:text/html;ANDREOLI - 1992 - Logic Programming with Focusing Proofs in Linear L.pdf:/Users/wanchengsyuan/Zotero/storage/KY9UC2C7/ANDREOLI - 1992 - Logic Programming with Focusing Proofs in Linear L.pdf:application/pdf}
 }
 
-@article{shulman_lnl_2021,
+@article{shulman:lnl:2021,
 	title = {{LNL} polycategories and doctrines of linear logic},
 	url = {http://arxiv.org/abs/2106.15042},
 	abstract = {We define and study {LNL} polycategories, which abstract the judgmental structure of classical linear logic with exponentials. Many existing structures can be represented as {LNL} polycategories, including {LNL} adjunctions, linear exponential comonads, {LNL} multicategories, {IL}-indexed categories, linearly distributive categories with storage, commutative and strong monads, {CBPV}-structures, models of polarized calculi, skew multicategories, as well as ordinary cartesian and symmetric multicategories and monoidal categories, polycategories, and linearly distributive and *-autonomous categories. To study such classes of structures uniformly, we define a notion of {LNL} doctrine, such that each of these classes of structures can be identified with the algebras for some such doctrine. We show that free algebras for {LNL} doctrines can be presented by a sequent calculus, and that every morphism of doctrines induces an adjunction between their 2-categories of algebras.},
@@ -885,7 +885,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Shulman - 2021 - LNL polycategories and doctrines of linear logic.pdf:/Users/wanchengsyuan/Zotero/storage/IELLC6U5/Shulman - 2021 - LNL polycategories and doctrines of linear logic.pdf:application/pdf;arXiv.org Snapshot:/Users/wanchengsyuan/Zotero/storage/SRWKANMW/2106.html:text/html}
 }
 
-@article{bourke_skew_2017,
+@article{bourke:skew:2017,
 	title = {Skew structures in 2-category theory and homotopy theory},
 	volume = {12},
 	issn = {1512-2891},
@@ -902,7 +902,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Bourke - 2017 - Skew structures in 2-category theory and homotopy .pdf:/Users/wanchengsyuan/Zotero/storage/5FQBHVJ4/Bourke - 2017 - Skew structures in 2-category theory and homotopy .pdf:application/pdf}
 }
 
-@inproceedings{veltri_coherence_2021,
+@inproceedings{veltri:coherence:2021,
 	location = {Cham},
 	title = {Coherence via Focusing for Symmetric Skew Monoidal Categories},
 	isbn = {978-3-030-88853-4},
@@ -920,7 +920,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Springer Full Text PDF:/Users/wanchengsyuan/Zotero/storage/8FPFBXZ6/Veltri - 2021 - Coherence via Focusing for Symmetric Skew Monoidal.pdf:application/pdf}
 }
 
-@article{bourke_free_2018,
+@article{bourke:free:2018,
 	title = {Free skew monoidal categories},
 	volume = {222},
 	issn = {0022-4049},
@@ -937,7 +937,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Submitted Version:/Users/wanchengsyuan/Zotero/storage/WVKNK72I/Bourke and Lack - 2018 - Free skew monoidal categories.pdf:application/pdf}
 }
 
-@article{bourke_skew_2018,
+@article{bourke:skew:2018,
 	title = {Skew monoidal categories and skew multicategories},
 	volume = {506},
 	issn = {0021-8693},
@@ -954,7 +954,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Submitted Version:/Users/wanchengsyuan/Zotero/storage/M5VLYTUI/Bourke and Lack - 2018 - Skew monoidal categories and skew multicategories.pdf:application/pdf}
 }
 
-@article{buckley_catalan_2015,
+@article{buckley:catalan:2015,
 	title = {The Catalan simplicial set},
 	volume = {158},
 	issn = {0305-0041, 1469-8064},
@@ -972,7 +972,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {Full Text PDF:/Users/wanchengsyuan/Zotero/storage/C5M6B5AB/Buckley et al. - 2015 - The Catalan simplicial set.pdf:application/pdf;Snapshot:/Users/wanchengsyuan/Zotero/storage/CRUM2ANY/7340716969F921F6A98AF871525F12AB.html:text/html}
 }
 
-@article{lack_skew_2012,
+@article{lack:skew:2012,
 	title = {Skew monoidales, skew warpings and quantum categories},
 	volume = {26},
 	url = {http://arxiv.org/abs/1205.0074},
@@ -989,7 +989,7 @@ The focusing theorem identifies a complete class of sequent proofs that have no 
 	file = {arXiv Fulltext PDF:/Users/wanchengsyuan/Zotero/storage/G8PKDGQC/Lack and Street - 2012 - Skew monoidales, skew warpings and quantum categor.pdf:application/pdf;arXiv.org Snapshot:/Users/wanchengsyuan/Zotero/storage/BW4NAH3L/1205.html:text/html}
 }
 
-@article{bourke_braided_nodate,
+@article{bourke:braided:nodate,
 	title = {{BRAIDED} {SKEW} {MONOIDAL} {CATEGORIES}},
 	volume = {35},
 	abstract = {We introduce the notion of a braiding on a skew monoidal category, whose curious feature is that the deﬁning isomorphisms involve three objects rather than two. Examples are shown to arise from 2-category theory and from bialgebras. In order to describe the 2-categorical examples, we take a multicategorical approach. We explain how certain braided skew monoidal structures in the 2-categorical setting give rise to braided monoidal bicategories. For the bialgebraic examples, we show that, for a skew monoidal category arising from a bialgebra, braidings on the skew monoidal category are in bijection with cobraidings (also known as coquasitriangular structures) on the bialgebra.},
